# ProductivityTgBot

./: .replit  README.md  app.py  bot.py  config.py  database.py  encryption.py  handlers.py  keyboards.py  main.py  models.py  pyproject.toml  utils.py
static/css/: style.css
static/js/: main.js
templates/: about.html  index.html  layout.html
